add forced check plugins for spotbugs, pmd, checkstyle, jacoco